ChangeLog
28/4/2018 version 0.2-4:

- fixed a warning and some other CRAN issues

29/11/2016 version 0.2-3:

- fixed a clang compiler bug as follows:

newmat6.cpp:431:13: error: ordered comparison between pointer and zero ('int *' and 'int')
   if (indx > 0) { delete [] indx; indx = 0; }
       ~~~~ ^ ~

- added CITATION file to include JSS paper
- some more changes to pass CRAN checks


30/03/2014 version 0.2-2:

- changed defaults: maxEval=10*istep, optimum=-Inf
- replaced seq(x, x, length=y) in demos by rep(x, y)
- made the cmaes parameters lambda and mu available in the user interface
- the function now returns more information, and the result is of type "malschains"
- removed a needless extern "C"

10/05/2013 version 0.2-1:

- disabled restarting because it may yield to a result of 0 fitness and causes R to crash in Windows x64
- added a comment for the original cmaes code in the LICENSE file

02/05/2013 version 0.2: 

- the local searches are directly accessible
- the external pointer calling mechanism now uses an environment
- seed in cmaes can now be fixed
- depend on Rcpp 0.9.10
- roxygen2 is used
- trace=FALSE now really mutes the algorithm

26/03/2012 version 0.1-2: fixes for Mac OSX and Solaris.

26/03/2012 version 0.1-1: fixes for Mac OSX and Solaris. (not fully fixing the problems)

21/03/2012 version 0.1: initial version.
